--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,22 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location to show your position on the map.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to location to show your position on the map.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app needs access to location to show your position on the map.</string>
+    <key>io.flutter.embedded_views_preview</key>
+    <true/>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+            <string>$(GOOGLE_MAPS_API_KEY)</string>
+        </array>
+      </dict>
+    </array>
 </dict>
 </plist>
