--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.0.6
+  google_maps_flutter: ^2.1.0
+  geolocator: ^8.2.0
+  provider: ^6.0.2
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
 flutter:
-
   uses-material-design: true
-
+  assets:
+    - assets/fonts/
+    - assets/images/
+    - .env
